# hazardflow

./: .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  LICENSE-APACHE2  LICENSE-BSD  README.md  rust-toolchain  rustfmt.toml
.github/workflows/: deploy.yml
doc/: README.md  book.toml
doc/docs/: SUMMARY.md  contributors.md  getting-started.md  introduction.md
hazardflow/: Cargo.toml  README.md
hazardflow-designs/: Cargo.toml
hazardflow-designs/src/: lib.rs  prelude.rs
hazardflow-macro/: Cargo.toml
hazardflow-macro/src/: lib.rs
hazardflow-rustc/: Cargo.toml
hazardflow-rustc/src/: main.rs  options.rs
hazardflow/src/: config.rs  lib.rs
hazardflow/src/compiler/: build_submodule_graph.rs  codegen.rs  error.rs  mod.rs  package.rs  prelude.rs  virgen.rs
hazardflow/src/compiler/module/: mod.rs  module_ffi.rs  module_fsm.rs  module_inst.rs  module_seq.rs  module_split.rs  signature.rs
hazardflow/src/compiler/pure/: build_expr_ast.rs  expr.rs  function.rs  mod.rs
hazardflow/src/utils/: attributes.rs  macros.rs  math.rs  mod.rs  rustc_utils.rs  string.rs
hazardflow/src/vir/: integrate.rs  ir.rs  mod.rs
hazardflow/src/vir/analysis/: detect_comb_loop.rs  mod.rs
hazardflow/src/vir/opt/: dead_code.rs  inline_always.rs  mod.rs  wire_cache.rs
hazardflow/src/vir/utils/: mod.rs  replace.rs
scripts/: make_submission.sh
scripts/cpu/: .gitignore  bench_test.py  bench_test.sh  build.py  constants.py  cpi.py  isa_test.py  isa_test.sh  ppa.py  setup.py  trace.py  utils.py
scripts/fir_filter/: .gitignore  Makefile  dump.v  fir.v  test_fir.py
(+227 files in other folders)
