[package]
name = "hazardflow-rustc"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
clap = { version = "4.4.12", features = ["derive", "env"] }
hazardflow = { path = "../hazardflow" }
toml = "0.8.8"
env_logger = "*"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
chrono = "0.4.38"

[package.metadata.rust-analyzer]
rustc_private = true
