[package]
name = "hazardflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
hashcons = "0.1.2"
itertools = "0.12.0"
linked-hash-map = "0.5.6"
log = "0.4.20"
once_cell = "1.19.0"
thiserror = "1.0"

[package.metadata.rust-analyzer]
rustc_private = true
